static/styles/zulip.css
/* ... */
.loading_indicator_text {
    /* If you change these, make sure to adjust the constants in
     * make_loading_indicator as well */
    margin-left: 20px;
    font-size:   33px;
    font-weight: bold;
    line-height: 38px;
}

.settings-section .loading_indicator_text {
    font-size: 12px;
    font-weight: 400;
    vertical-align: middle;
    line-height: 20px;
    display: inline-block;
    float: none;
}

.settings-section .loading_indicator_spinner {
    width: 12px;
    height: 12px;
    vertical-align: middle;
    display: inline-block;
}


.twitter-image, .message_inline_image {
    margin-bottom: 5px;
    margin-left: 5px;
    height: 100px;
    display: block !important;
    border: none !important;
}

.twitter-image img, .message_inline_image img {
    height: auto;
    max-height: 100%;
}

.popover {
    width: auto;
}

.popover-title {
    overflow-x: hidden;
    text-overflow: ellipsis;
    text-align: center;

    font-size:   inherit;
    line-height: inherit;
}

.popover-title:empty {
    display: none;
}

.popover_info {
    text-align: center;
}

.popover hr {
    margin-top:    5px;
    margin-bottom: 5px;
}

.popover-left, .popover-right {
    max-width: 175px;
}

.hotkeys_table {
    width: 245px;
    margin-right: 10px;
    font-size: 90%;
    display: inline-block;
    vertical-align: top;
}

.hotkeys_table th {
    width: 245px;
}

.hotkeys_table .hotkey {
    font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
    text-align: right;
    font-weight: bold;
    font-size: 90%;
    white-space: nowrap;
}

.operator_value {
    font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
    color: maroon;
}
.operator {
    font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
}

#loading_more_messages_indicator {
    margin: 10px;
}

#loading_more_messages_indicator_box_container {
    position: absolute;
    left: 50%;
}

#loading_more_messages_indicator_box {
    position: relative;
    left: -50%;
    top: 25px;
    border: 1px rgb(100, 100, 100) solid;
    background-color: rgba(230, 230, 230, 0.8);
    z-index: 1;
    -webkit-border-radius: 6px;
       -moz-border-radius: 6px;
            border-radius: 6px;
}

#page_loading_indicator {
    margin: 10px auto;
}

#subs_page_loading_indicator {
    margin: 10px auto;
}

.subscriber_list_loading_indicator {
    margin: 10px auto;
}

.table-striped thead th {
    background-color: #444;
    color: white;
}


#fmt_help_table {
    table-layout: fixed;
}

.subscription-email-hint-image {
    float: right;
    width: 80px;
    padding-right: 60px;
}

.subscription_header.collapsed {
    background-color: inherit;
}

.subscription_settings,
.subscription_header,
.subscription_header.active {
    background-color: #fefefe;
}

.color_swatch {
    display: inline-block;
    height: 18px;
    width: 18px;
    border-radius: 36px;
    padding: 0;
    margin: 0 0 0 10px;
    vertical-align: middle;
}

.subscriptions {
    margin-top: 55px;
    padding-left: 15px;
}

#subscriptions_table .subscription_block {
    padding-left: 0.5em;
    vertical-align: middle;
    display: inline-block;
}

#stream_filters .subscription_block {
    padding-bottom: 4px;
    line-height: 12px;
    padding-top: 4px;
    margin-right: 15px;
    padding-left: 33px;
}

#stream_filters .subscription_block.stream-with-count {
    margin-right: 38px;
}

.subscription_name,
.subscription_description {
    line-height: 1em;
    width: 100%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.subscription-name-row,
.subscription-description-row {
    line-height: 47px;
}

.subscription-description-row {
    font-weight: 300;
}

#add_new_subscription {
    text-align: center;
}

.subject-name {
    display: block;
    line-height: 1.3em;
    width: 100%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.subscription_header {
    min-height: 47px;
}

.subscription_header .subscription_name {
    width: auto;
}

.subscription_header .subscription_lock {
    font-size: 23px;
    display: inline-block;
    vertical-align: middle;
    margin-left: 12px;
    margin-right: 1px;
}

.subscription_settings {
    width: 100%;
    position: relative;
    top: -1px;
}

.subscription_settings form {
    text-align: center;
}

.subscription_settings ul {
    list-style-type: none;
}

.subscription-type {
    text-align: center;
    padding: 5px;
    width: 80%;
    margin: auto;
    font-weight: 300;
}

.stream-email {
    width: 80%;
    margin: auto;
    margin-top: 5px;
    text-align: center;
    padding: 5px;
    font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
}


.subscription-control-label {
    display: inline-block;
    vertical-align: middle;
    line-height: 18px;
    padding: 5px;
}

.sp-replacer,
.sp-preview,
.sp-preview-inner {
    border-radius: 20px;
}

.sp-preview {
    width: 20px;
    border: none;
    box-shadow: 0px 0px 1px rgba(0,0,0,1);
}

.sp-replacer {
    margin-right: 12px;
    border: none;
    box-shadow: 0px 0px 2px rgba(0,0,0,0.8);
}

.subscription-config {
    width: 270px;
    margin: auto;
    margin-top: 25px;
}

.stream-email-box,
.subscriber_list_settings,
.rename-stream {
    margin: 20px 15px 20px 15px;
}

.subscription_row {
    border-top: 1px solid #ddd;
}

.stream-email .email-address {
    width: 90%;
    display: block;
    margin: auto;
    white-space: -moz-pre-wrap !important;
    white-space: -pre-wrap;
    white-space: -o-pre-wrap;
    white-space: pre-wrap;
    word-wrap: break-word;
    word-break: break-all;
    white-space: normal;
}

.sub_setting_control[type="checkbox"] {
    margin: 0 30px 5px 20px;
}

.streams_popover .sp-container {
    background: white;
    cursor: pointer;
    border: none;
}

.streams_popover .sp-palette-container {
    border-right: none;
}

.streams_popover .colorpicker-container {
    display: inline-block;
    margin-right: 10px;
}
/* ... */

